--- a/src/App.css
+++ b/src/App.css
@@ -153,14 +153,16 @@ header a {
 .paper-show-container,
 .not-found {
   /* position: absolute; */
-  margin-top: 10vh;
+  margin-top: 15vh;
+}
+
+.paper-show-container {
+  width: 90vw;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .user-papers-container {
-  /* height: 300px; */
-
-  /* overflow-y: scroll; 
-  -webkit-overflow-scrolling: touch; */
   border: 2px solid whitesmoke;
   border-radius: 5px;
 }
@@ -172,11 +174,9 @@ header a {
 }
 
 .post-input-container {
-  /* position: fixed; */
   z-index: 999;
   width: 80%;
   margin: auto;
-  /* height: 400px; */
 }
 
 .papers-list,
@@ -203,7 +203,9 @@ header a {
   padding-bottom: 10px;
 }
 
-div[class^="paper-category-"] > span {
+div[class^="paper-category-"] > span,
+div[class^="paper-category-"] h5 span,
+.paper-review-username > span {
   padding: 5px;
   border-radius: 5px;
   width: 25%;
@@ -216,7 +218,18 @@ div[class^="paper-category-"] > span {
   padding: 0.2rem 0.2rem;
 }
 
-.paper-category-biology > span {
+.paper-review-username {
+  border: 1px solid rgba(0,0,0,0.2);
+  margin-bottom: 10px;
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+
+
+.paper-category-biology > span,
+.paper-category-biology h5 span {
   background: linear-gradient(
     to right,
     rgba(0, 170, 249, 0.2),
@@ -224,7 +237,8 @@ div[class^="paper-category-"] > span {
   );
 }
 
-.paper-category-physics > span {
+.paper-category-physics > span,
+.paper-category-physics h5 span {
   background: linear-gradient(
     to right,
     rgba(249, 170, 0, 0.2),
@@ -232,7 +246,8 @@ div[class^="paper-category-"] > span {
   );
 }
 
-.paper-category-chemistry > span {
+.paper-category-chemistry > span,
+.paper-category-chemistry h5 span {
   background: linear-gradient(
     to right,
     rgba(0, 249, 170, 0.2),
@@ -240,10 +255,17 @@ div[class^="paper-category-"] > span {
   );
 }
 
+.paper-review-username > span {
+  background: linear-gradient(
+    to right,
+    rgba(0, 0, 170, 0.2),
+    rgba(0, 170, 249, 0.2)
+  );
+}
+
 .main-list-item {
   display: flex;
   height: 100%;
-  /* width: 80%; */
 }
 
 .main-title-container {
@@ -273,8 +295,6 @@ span[class^="main-rate-"] {
   /* border-radius: 50px; */
   border-radius: 0.5rem;
   position: relative;
-
-  /* box-shadow: 2px 2px rgba(0,0,0,0.2) */
 }
 
 span[class^="main-rate-value"] {
@@ -287,4 +307,9 @@ span.positive {
 
 span.negative {
   background: radial-gradient(rgba(249, 0, 170, 0.8), rgba(255, 255, 255, 0.8));
+}
+
+.doi-oa-links {
+  list-style: none;
+  padding-left: 0px;
 }
