--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+a,p,h1,h2,h3,h4,h5 {
+  font-family: Rubik, Lato, "Lucida Grande", "Lucida Sans Unicode", Tahoma,
+    Sans-Serif;
+}
+
 ::selection {
   background: #5f00f9;
   color: #fff;
@@ -18,7 +23,7 @@ header {
   font-size: calc(10px + 2vmin);
   color: white;
 
-  position: fixed;
+  position: fixed; /* previously fixed */
   top: 0;
   width: 100vw;
 }
@@ -28,7 +33,13 @@ header a {
   color: white;
 }
 
-.home-body {
+/* Home */
+.home-container {
+  position: relative;
+  height: 100vh;
+  background-color: black;
+}
+.home-splash {
   background-color: #c7c6c6;
   height: 50%;
   min-width: 100vw;
@@ -39,7 +50,7 @@ header a {
   justify-content: center;
   top: 0px;
   color: whitesmoke;
-  z-index: -1;
+  z-index: 1;
 }
 
 .home-body h1 {
@@ -52,12 +63,55 @@ header a {
   z-index: 20;
   top: 50vh;
   min-width: 100vw;
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.home-wrapper {
+  background-color: #fff;
+  margin: 0 auto;
+  max-width: 100vw;
 }
 
+.home-header-title {
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+}
+
+.home-header-title:before {
+  /* border-left: 4px solid #f9009a; */
+  /* border-right: 4px solid #f9009a; */
+  border-top: 4px solid #f9009a;
+  content: " ";
+  height: 50px;
+  left: -16px;
+  position: absolute;
+  right: -16px;
+  top: 50%;
+}
+
+.home-header-inner {
+  padding: 16px;
+  width: auto;
+  background-color: #fff;
+  color: currentColor;
+  position: relative;
+  display: inline-block;
+}
+
+.home-header-inner h2 {
+  font-size: 1.3em;
+  font-weight: 1000;
+  display: inline-block;
+  margin: 0;
+  vertical-align: middle;
+  text-transform: uppercase;
+  line-height: 1.2;
+  letter-spacing: 0.2em;
+  font-style: italic;
+}
+
+/* Sign In / Sign Up */
 .button-block {
   display: flex;
   top: 0px;
