--- a/src/App.css
+++ b/src/App.css
@@ -85,11 +85,9 @@ footer h1 {
 
   position: absolute;
   z-index: 999;
-  bottom: 0;
-  width: 40px;
-  height: 40px;
-  /* background:url("https://www.pngfind.com/pngs/m/627-6273703_down-svg-icon-free-transparent-background-scroll-down.png");
-  background-size: contain; */
+  bottom: 5%;
+  width: 3em;
+  height: 3em;
   background-color: #f9009a;
 }
 
