--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 a,
 p,
 h1,
@@ -22,7 +26,8 @@ h5 {
 /*  header and footer */
 header {
   z-index: 999;
-  background-color: #282c34;
+  background-color: whitesmoke;
+  /* #282c34; */
   height: 10vh;
   display: flex;
   flex-direction: row;
@@ -82,13 +87,23 @@ footer h1 {
 }
 
 .scroll {
-
   position: absolute;
   z-index: 999;
   bottom: 5%;
   width: 3em;
   height: 3em;
-  background-color: #f9009a;
+}
+
+.scroll svg {
+  width: 80%;
+  height: 80%;
+}
+
+/* used to as an anchor for the scroll prompt */
+#content-top {
+  position: absolute;
+  z-index: 999;
+  bottom: 10%;
 }
 
 .home-splash-image {
