--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,7 @@ html {
   scroll-behavior: smooth;
 }
 
-a,
-p,
-h1,
-h2,
-h3,
-h4,
-h5 {
+* {
   font-family: AtlasGroteskWeb, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -86,7 +80,7 @@ footer h1 {
   margin: auto;
 }
 
-.scroll {
+span.scroll {
   position: absolute;
   z-index: 999;
   bottom: 5%;
@@ -99,7 +93,7 @@ footer h1 {
   height: 80%;
 }
 
-/* used to as an anchor for the scroll prompt */
+/* used as an anchor for the scroll prompt */
 #content-top {
   position: absolute;
   z-index: 999;
