--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ header {
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgba(0, 0, 0, 0);
   position: fixed;
   top: 0;
   width: 100%;
