--- a/src/App.css
+++ b/src/App.css
@@ -52,9 +52,12 @@ header a {
   right: 5%;
 }
 
-.icon-open,
-.icon-closed {
+.icon-open {
   color: #f9009a;
+}
+
+.icon-closed {
+  color: #222;
 }
 
 .icon-open {
@@ -340,46 +343,75 @@ span.created-at {
 
 .drop-menu {
   position: fixed;
+  z-index: 150;
+  min-width: 100vw;
+  height: 100vh;
+  /* background-color: #282c34; */
+  align-content: center;
+  transition: 0.5s;
+}
+
+.drop-menu-overlay {
+  position: fixed;
   z-index: 100;
   min-width: 100vw;
   height: 100vh;
-  background-color: #282c34;
-  align-content: center;
-
-  transition: 0.5s;
+  background-color: #f9009a;
 }
 
 #menu {
   position: absolute;
-  top: 10vh;
+  display: flex;
+  flex-direction: column;
+  top: 15vh;
   list-style: none;
   text-align: center;
-  width: 100%;
+  width: 100vw;
+  margin: auto;
   padding: 0;
 }
 
-#menu li {
-  margin: auto;
-  padding-bottom: 30px;
-  padding-top: 30px;
-  font-size: 2em;
+#menu a {
   text-decoration: none;
-  color: whitesmoke;
+  text-transform: uppercase;
+  background-color: #000;
+  color: #f9009a;
+  display: block;
+  width: 85%;
+  margin: 5px auto 5px auto;
+
+  font-weight: 500;
+  font-size: 40px;
+  color: #f9009a;
+  font-weight: 500;
+  padding: 0.5em;
+  letter-spacing: 0.1em;
+  animation: fadeIn 1s linear forwards;
+
 }
 
-#menu a:hover > li {
-  background-color: #282c45;
+#menu a > span.left-moji {
+  position: absolute;
+  left: 2%;
+  font-size: 1.2em;
+
+}
+
+#menu a > span.right-moji {
+  position: absolute;
+  right: 2%;
+  font-size: 1.2em;
 }
 
 #menu input {
   margin: auto auto 1em auto;
-  background-color: #282c34;
-  font-size: 2em;
+  background-color: #f9009a;
+  font-size: 2.5em;
   width: 80vw;
   text-align: center;
-  color: #c7c6c6;
+  color: rgb(34, 34, 34);
   min-height: 50px;
-  border-bottom: 1px solid #c7c6c6;
+  border-bottom: 0.1em solid rgb(34, 34, 34);
   border-top: 0px;
   border-right: 0px;
   border-left: 0px;
