--- a/src/App.css
+++ b/src/App.css
@@ -579,6 +579,38 @@ span.paper-count {
   margin-bottom: 1em;
 }
 
+.user-stats {
+  display: flex;
+
+  line-height: 20px;
+  margin-bottom: 2px;
+  color: #000 !important;
+  position: relative;
+}
+
+span.user-stat-count {
+  font-size: 0.8rem;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  text-align: center;
+}
+
+span.review-count, span.paper-count {
+  background: radial-gradient(rgba(0, 249, 170, 1), rgba(255, 255, 255, 0.8));
+  text-align: center;
+}
+
+span.review-count {
+  position: absolute;
+  left: 25%;
+}
+
+span.paper-count {
+  position: absolute;
+  left: 0;
+}
+
 /* .home-list-item {
   position: relative;
   height: 100%;
@@ -709,10 +741,8 @@ div[class^="paper-category-"] h5 span,
 }
 
 .main-title-container {
-  /* border: 0.5px solid grey; */
   padding: 5px;
   width: 90%;
-  /* border-radius: 5px; */
   text-align: start;
   z-index: -10;
 }
